--- a/SChat/MainWindow.xaml
+++ b/SChat/MainWindow.xaml
@@ -42,105 +42,20 @@
                                 FontWeight="Bold"
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Top"
-                                FontSize="10"/>
+                                FontSize="10"
+                                Width="90"/>
                             <Label 
                                 Content="Some text..."
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Bottom"
                                 FontSize="10" 
-                                Width="95"/>
+                                Width="90"/>
                         </Grid>
                         <Border
                             BorderBrush="Black"
-                            BorderThickness="1"/>
+                            BorderThickness="1.3"/>
                     </Grid>
-                    <Grid
-                        Margin="10" 
-                        Width="130" 
-                        Height="40">
-                        <Image 
-                            Margin="5,0,0,0"
-                            HorizontalAlignment="Left"
-                            Width="30"
-                            Height="30"
-                            Source="Resources/av.jpg">
-                        </Image>
-                        <Grid Margin="40,0,0,0">
-                            <Label 
-                                Content="Name"
-                                FontWeight="Bold"
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Top"
-                                FontSize="10"/>
-                            <Label 
-                                Content="Some text..."
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Bottom"
-                                FontSize="10" 
-                                Width="95"/>
-                        </Grid>
-                        <Border
-                            BorderBrush="Black"
-                            BorderThickness="1"/>
-                    </Grid>
-                    <Grid
-                        Margin="10" 
-                        Width="130" 
-                        Height="40">
-                        <Image 
-                            Margin="5,0,0,0"
-                            HorizontalAlignment="Left"
-                            Width="30"
-                            Height="30"
-                            Source="Resources/av.jpg">
-                        </Image>
-                        <Grid Margin="40,0,0,0">
-                            <Label 
-                                Content="Name"
-                                FontWeight="Bold"
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Top"
-                                FontSize="10"/>
-                            <Label 
-                                Content="Some text..."
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Bottom"
-                                FontSize="10" 
-                                Width="95"/>
-                        </Grid>
-                        <Border
-                            BorderBrush="Black"
-                            BorderThickness="1"/>
-                    </Grid>
-                    <Grid
-                        Margin="10" 
-                        Width="130" 
-                        Height="40">
-                        <Image 
-                            Margin="5,0,0,0"
-                            HorizontalAlignment="Left"
-                            Width="30"
-                            Height="30"
-                            Source="Resources/av.jpg">
-                        </Image>
-                        <Grid Margin="40,0,0,0">
-                            <Label 
-                                Content="Name"
-                                FontWeight="Bold"
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Top"
-                                FontSize="10"/>
-                            <Label 
-                                Content="Some text..."
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Bottom"
-                                FontSize="10" 
-                                Width="95"/>
-                        </Grid>
-                        <Border
-                            BorderBrush="Black"
-                            BorderThickness="1"/>
-                    </Grid>
+                    
                 </StackPanel>
             </Grid>
             <Grid Grid.Row="1">
@@ -167,12 +82,12 @@
                 </Grid>
                 <Border
                     BorderBrush="Black"
-                    BorderThickness="1"/>
+                    BorderThickness="1"
+                    VerticalAlignment="Top"/>
             </Grid>
         </Grid>
         <Grid Grid.Column="1">
             <Frame Name="MainFrame"/>
-            <Button Content="Button" HorizontalAlignment="Left" Margin="275,162,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         </Grid>
     </Grid>
 </Window>
