--- a/SChat/MainWindow.xaml
+++ b/SChat/MainWindow.xaml
@@ -24,20 +24,25 @@
                 <RowDefinition Height="50*"/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
-                <StackPanel Name="dsg">
-                    <Grid Name="asdf"
+                <StackPanel 
+                    Name="ChatStackPanel"
+                    Margin="0,0,0,30">
+                    <Grid Name="ChatGridMain"
                         Margin="10" 
                         Width="130" 
                         Height="40">
-                        <Image Name="image"
+                        <Image Name="ChatImage"
                             Margin="5,0,0,0"
                             HorizontalAlignment="Left"
                             Width="30"
                             Height="30"
                             Source="Resources/av.jpg">
                         </Image>
-                        <Grid Margin="40,0,0,0">
+                        <Grid 
+                            Name="ChatGridText"
+                            Margin="40,0,0,0">
                             <Label 
+                                Name="ChatNameLabel"
                                 Content="Name"
                                 FontWeight="Bold"
                                 HorizontalAlignment="Left"
@@ -45,6 +50,7 @@
                                 FontSize="10"
                                 Width="90"/>
                             <Label 
+                                Name="ChatTextLabel"
                                 Content="Some text..."
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Bottom"
@@ -52,11 +58,52 @@
                                 Width="90"/>
                         </Grid>
                         <Border
+                            Name="ChatBorder"
                             BorderBrush="Black"
                             BorderThickness="1.3"/>
                     </Grid>
-                    
+                    <Grid Background="White"
+                        Width="140"
+                          Height="30"
+                          Margin="10"></Grid>
+                    <Grid Background="White"
+                        Width="140"
+                          Height="30"
+                          Margin="10"></Grid>
+
+
+                    <Grid Background="White"
+                        Width="140"
+                          Height="30"
+                          Margin="10"></Grid>
+
+                    <Grid Background="White"
+                        Width="140"
+                          Height="30"
+                          Margin="10"></Grid>
+                    <Grid Background="White"
+                        Width="140"
+                          Height="30"
+                          Margin="10"></Grid>
+                    <Grid Background="White"
+                        Width="140"
+                          Height="30"
+                          Margin="10"></Grid>
+                    <Grid Background="White"
+                        Width="140"
+                          Height="30"
+                          Margin="10"></Grid>
+                    <Grid Background="White"
+                        Width="140"
+                          Height="30"
+                          Margin="10"></Grid>
                 </StackPanel>
+                <Button 
+                    Content="Добавить новый чат"
+                    VerticalAlignment="Bottom" 
+                    Height="30"
+                    Click="AddNewChat">
+                </Button>
             </Grid>
             <Grid Grid.Row="1">
                 <Image 
@@ -67,14 +114,16 @@
                     Source="Resources/av.jpg">
                 </Image>
                 <Grid Margin="40,0,0,0">
-                    <Label 
+                    <Label
+                        Name="Name"
                         Content="Name"
                         FontWeight="Bold"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
                         FontSize="10"/>
                     <Label 
-                        Content="Some text..."
+                        Name="Status"
+                        Content="Status"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Bottom"
                         FontSize="10" 
