--- a/SChat/ChatPage.xaml
+++ b/SChat/ChatPage.xaml
@@ -5,10 +5,33 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SChat"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      Height="421" 
+      Width="644"
       Title="ChatPage">
 
     <Grid Background="Gray">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="8*"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            
+        </Grid>
+        <Grid 
+            Grid.Row="1" 
+            Background="White">
+            <TextBox
+                Name="MessageBox"
+                Text=""
+                FontSize="20"
+                Margin="0,0,50,0">
+            </TextBox>
+            <Image
+                Margin="599,5,5,5"
+                Source="Resources/message.png"
+                MouseDown="SendMessage">
+            </Image>
+        </Grid>
         
     </Grid>
 </Page>
