--- a/SChat/ChatPage.xaml
+++ b/SChat/ChatPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:SChat"
       mc:Ignorable="d" 
       Height="421" 
-      Width="644"
+      Width="634"
       Title="ChatPage">
 
     <Grid Background="Gray">
@@ -17,7 +17,7 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
-
+            <Label Content="CHATNAME" Foreground="White" />
         </Grid>
 
         <Grid Grid.Row="1">
@@ -28,15 +28,21 @@
                           Width="624"
                           Visibility="Visible"
                           Height="40">
-                        <Image/>
 
-
-                        <Label 
-                            Content="Author" 
-                            Margin="40,0,0,0"
-                            HorizontalAlignment="Left" 
-                            VerticalAlignment="Top"
-                            Width="100"/>
+                        <Image Width="35"
+                               Height="35"
+                               Source="Resources/av.jpg"
+                               Margin="5"
+                               HorizontalAlignment="Left"/>
+                        <StackPanel Orientation="Horizontal">
+                            <Label 
+                                Content="Author" 
+                                Margin="40,0,0,0"
+                                HorizontalAlignment="Left" 
+                                VerticalAlignment="Top"/>
+                            <Label
+                                Content="01.02.2022"/>
+                        </StackPanel>
                         <Label 
                             Content="Message"
                             Margin="40,0,0,0"
@@ -57,9 +63,9 @@
                 Margin="0,0,50,0">
             </TextBox>
             <Image
-                Margin="599,5,5,5"
+                Margin="589,5,5,5"
                 Source="Resources/message.png"
-                MouseDown="SendMessage">
+                MouseDown="SendMessageButton">
             </Image>
         </Grid>
 
