--- a/SChat/ChatPage.xaml
+++ b/SChat/ChatPage.xaml
@@ -17,11 +17,15 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
-            <Label Content="CHATNAME" Foreground="White" />
+            <Label Content="CHATNAME" 
+                   Foreground="White" />
+            <TextBox Name="CountBox" Width="40"/>
+            <Button Margin="342,0,163,0" Content="AddTestMessages" Click="AddSomeMessages"/>
         </Grid>
 
         <Grid Grid.Row="1">
-            <ScrollViewer VerticalScrollBarVisibility="Hidden">
+            <ScrollViewer Name="scroll"
+                          VerticalScrollBarVisibility="Hidden">
                 <StackPanel Name="MessageStackPanel">
                     <Grid Background="White"
                           Margin="10,0,10,10"
@@ -48,7 +52,7 @@
                             Margin="40,0,0,0"
                             HorizontalAlignment="Left"
                             VerticalAlignment="Bottom" 
-                            Width="574"/> 
+                            Width="574"/>
                     </Grid>
                 </StackPanel>
             </ScrollViewer>
@@ -57,7 +61,7 @@
         <Grid Grid.Row="2" 
             Background="White">
             <TextBox
-                Name="MessageBox"
+                Name="MsgBox"
                 Text=""
                 FontSize="20"
                 Margin="0,0,50,0">
