--- a/SChat/LoginWindow.xaml
+++ b/SChat/LoginWindow.xaml
@@ -5,8 +5,71 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SChat"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="450" Width="800">
-    <Grid>
-        
+        Loaded="OnLoad"
+        ResizeMode="NoResize"
+        Title="Окно входа" 
+        Height="350" Width="600" 
+        WindowStartupLocation="CenterScreen">
+    <Grid Background="Gray">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="99"/>
+        </Grid.RowDefinitions>
+        <StackPanel
+            Grid.Row="0"
+            Orientation="Vertical"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Center">
+            <Label 
+            Content="Логин:" 
+            HorizontalAlignment="Left" 
+            VerticalAlignment="Top" 
+            Height="40" 
+            Width="240"
+            FontSize="20"/>
+            <TextBox 
+            Name="logbox" 
+            HorizontalAlignment="Left" 
+            TextWrapping="Wrap" 
+            VerticalAlignment="Top" 
+            Height="40" 
+            Width="240"
+            FontSize="20"/>
+            <Label 
+            Content="Пароль:" 
+            HorizontalAlignment="Left" 
+            VerticalAlignment="Top" 
+            Height="40" 
+            Width="240"
+            FontSize="20"/>
+            <PasswordBox 
+            Name="passbox" 
+            HorizontalAlignment="Left" 
+            VerticalAlignment="Top" 
+            Height="40" 
+            Width="240"
+            FontSize="20"/>
+        </StackPanel>
+        <StackPanel
+            Orientation="Horizontal"
+            Grid.Row="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
+            <Button 
+            x:Name="RegButton" 
+            Content="Регистрация"
+            Height="40" 
+            Width="150" 
+            Margin="0,0,30,0"
+            FontSize="20"
+            Click="RegButton_Click"/>
+            <Button 
+            x:Name="LogButton" 
+            Content="Вход"
+            Height="40" 
+            Width="150"
+            FontSize="20"
+            Click="LogButton_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
