--- a/SChat/LoginWindow.xaml
+++ b/SChat/LoginWindow.xaml
@@ -49,6 +49,7 @@
             Height="40" 
             Width="240"
             FontSize="20"/>
+            <TextBox Name="chatid" Height="36"></TextBox>
         </StackPanel>
         <StackPanel
             Orientation="Horizontal"
