--- a/SChat/LoginWindow.xaml
+++ b/SChat/LoginWindow.xaml
@@ -28,7 +28,7 @@
             Width="240"
             FontSize="20"/>
             <TextBox 
-            Name="logbox" 
+            Name="LogBox" 
             HorizontalAlignment="Left" 
             TextWrapping="Wrap" 
             VerticalAlignment="Top" 
@@ -43,7 +43,7 @@
             Width="240"
             FontSize="20"/>
             <PasswordBox 
-            Name="passbox" 
+            Name="PassBox" 
             HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
             Height="40" 
