--- a/SChat/ChatPage.xaml
+++ b/SChat/ChatPage.xaml
@@ -17,11 +17,18 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
-            <Label Name="ChatName"
+            <StackPanel Orientation="Horizontal">
+                <Label Name="ChatName"
                    Content="CHATNAME" 
-                   Foreground="White" />
-            <TextBox Name="CountBox" Width="40"/>
-            <Button Margin="342,0,163,0" Content="AddTestMessages" Click="AddSomeMessages"/>
+                   Foreground="White"
+                   FontSize="14"/>
+                <Button Width="15" 
+                        Height="15"
+                        Click="ChatSettings_Click">
+                    <Image Source="Resources\setting.png"></Image>
+                </Button>
+            </StackPanel>
+                
         </Grid>
 
         <Grid Grid.Row="1">
