--- a/SChat/ProfilePage.xaml
+++ b/SChat/ProfilePage.xaml
@@ -14,8 +14,10 @@
             <RowDefinition Height="150*"/>
             <RowDefinition Height="271*"/>
         </Grid.RowDefinitions>
-        <Image Grid.Row="0"
-               Source="Resources/StandartImage.png">
+        <Image x:Name="ProfileImage"
+               Grid.Row="0"
+               Source="Resources/StandartImage.png"
+               MouseDown="ChangeImageProfile_MouseDown">
         </Image>
         <StackPanel Grid.Row="1"
                     VerticalAlignment="Top"
