--- a/SChat/MainWindow.xaml
+++ b/SChat/MainWindow.xaml
@@ -23,12 +23,12 @@
                 <RowDefinition Height="50*"/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
-                <ScrollViewer VerticalScrollBarVisibility="Hidden">
-                    <ListBox Name="ChatListBox" 
-                             HorizontalAlignment="Center"
+                <ListBox Name="ChatListBox" 
                              Background="LightGray"
-                             Width="144">
-                        <Grid Height="40" Visibility="Hidden">
+                             ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                        <Grid Height="40" Visibility="Visible" 
+                              Width="135"
+                              HorizontalAlignment="Center">
                             <Image
                               Margin="5,0,0,0"
                               HorizontalAlignment="Left"
@@ -56,53 +56,66 @@
                             BorderThickness="1.3"/>
                         </Grid>
                     </ListBox>
-                </ScrollViewer>
-                <StackPanel VerticalAlignment="Bottom" >
-                    <Button 
-                    Content="Добавить новый чат"
-                    Height="30">
-                    </Button>
-                    <Button 
-                    Content="Выход"
-                    Height="30"
-                    Click="TempExit">
+                    <StackPanel Orientation="Vertical"
+                            VerticalAlignment="Bottom">
+                    <StackPanel Name="AddNewStackPanel"
+                                Orientation="Horizontal"
+                                Visibility="Collapsed">
+                        <TextBox Name="ChatAddNameOfChat"
+                                 FontSize="16"
+                                 Height="30"
+                                 Width="120"
+                                 HorizontalAlignment="Left">
+                        </TextBox>
+                        <Button Height="30"
+                                Width="30"
+                                HorizontalAlignment="Right"
+                                Click="AddNewChatClose">
+                            <Image Source="Resources/Add.png"
+                                   Margin="5">
+                            </Image>
+                        </Button>
+                    </StackPanel>
+                    <Button Name="AddNewChatButton"
+                            Visibility="Visible"
+                            Content="Добавить новый чат"
+                            Height="30"
+                            Click="AddNewChat">
                     </Button>
                 </StackPanel>
             </Grid>
             <Grid Grid.Row="1">
-                <Image 
-                    Name="ProfileImage"
-                    Margin="5,0,0,0"
-                    HorizontalAlignment="Left"
-                    Width="30"
-                    Height="30"
-                    Source="Resources/StandartProfile.png">
+                <Image Name="ProfileImage"
+                       Margin="5,0,0,0"
+                       HorizontalAlignment="Left"
+                       Width="30"
+                       Height="30"
+                       Source="Resources/StandartProfile.png">
                 </Image>
                 <Grid Margin="40,0,0,0" 
                       MouseDown="Profile_MouseDown">
-                    <Label
-                        Name="ProfileName"
-                        Content="Name"
-                        FontWeight="Bold"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        FontSize="10" 
-                        Width="110" 
-                        Height="25"/>
-                    <Label 
-                        Name="ProfileStatus"
-                        Content="Status"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Bottom"
-                        FontSize="10" 
-                        Width="85" 
-                        Height="25" 
-                        Margin="0,0,0,3"/>
-                    <Image 
-                        Width="25" 
-                        Height="25" 
-                        VerticalAlignment="Bottom"
-                        HorizontalAlignment="Right"/>
+                    <Label Name="ProfileName"
+                           Content="Name"
+                           FontWeight="Bold"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Top"
+                           FontSize="10" 
+                           Width="75" 
+                           Height="25"/>
+                    <Label Name="ProfileStatus"
+                           Content="Status"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Bottom"
+                           FontSize="10" 
+                           Width="75" 
+                           Height="25" 
+                           Margin="0,0,0,3"/>
+                    <Image Source="Resources/Setting.png"
+                           Width="25" 
+                           Height="25" 
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="0,0,5,0"/>
                 </Grid>
                 <Border
                     BorderBrush="Black"
