--- a/SChat/ProfilePage.xaml
+++ b/SChat/ProfilePage.xaml
@@ -10,28 +10,100 @@
       Title="ChatPage">
 
     <Grid Background="Gray">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="150*"/>
-            <RowDefinition Height="271*"/>
-        </Grid.RowDefinitions>
-        <Image x:Name="ProfileImage"
-               Grid.Row="0"
-               Source="Resources/StandartProfile.png"
-               MouseDown="ChangeImageProfile_MouseDown">
-        </Image>
+
+        <Grid Background="DimGray"
+              Grid.RowSpan="2"
+              Margin="40">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="100*"/>
+                <RowDefinition Height="241*"/>
+            </Grid.RowDefinitions>
+
+            <StackPanel Grid.Row="0" 
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center">
+                <Image Name="ProfileImage"
+                       Width="80"
+                       Height="80"
+                       Source="Resources/StandartProfile.png"
+                       MouseDown="ChangeImageProfile_MouseDown">
+                </Image>
+                <StackPanel Orientation="Vertical"
+                            Width="100"
+                            VerticalAlignment="Center">
+                    <Label Name="NickNameLabel"
+                           Content="Name"
+                           FontWeight="Bold" 
+                           Foreground="White" >
+                    </Label>
+                    <Label Name="StatusLabel"
+                           Content="Status" 
+                           Foreground="White">
+                    </Label>
+                </StackPanel>
+            </StackPanel>
+            <Grid Grid.Row="1"
+                  Background="DarkGray"
+                  Margin="20">
+                <StackPanel>
+
+                    <StackPanel Orientation="Horizontal"
+                                Height="40"
+                                VerticalAlignment="Top"
+                                Margin="7">
+                        <StackPanel Orientation="Vertical"
+                                    Width="420">
+                            <Label Content="Электронная почта"
+                               Foreground="Black"/>
+                            <Label x:Name="EmailBox"
+                               Content="mail@mail.com"
+                               Foreground="White"
+                               Margin="0,-8,0,0"
+                               Height="30"/>
+                        </StackPanel>
+                        <Button Width="80"
+                            Content="Изменить"
+                            Margin="0,18,0,0"
+                            HorizontalAlignment="Right">
+                        </Button>
+                    </StackPanel>
+
+
+                    <StackPanel Orientation="Horizontal"
+                            Height="40"
+                            VerticalAlignment="Top"
+                            Margin="7">
+                        <StackPanel Orientation="Vertical"
+                                Width="420">
+                            <Label Content="Дата рождения"
+                               Foreground="Black"/>
+                            <Label x:Name="BirthdayBox"
+                               Content="13.03.2003"
+                               Foreground="White"
+                               Margin="0,-8,0,0"
+                               Height="30"/>
+                        </StackPanel>
+                        <Button Width="80"
+                            Content="Изменить"
+                            Margin="0,18,0,0"
+                            HorizontalAlignment="Right">
+                        </Button>
+                    </StackPanel>
+
+                </StackPanel>
+                
+                
+
+            </Grid>
+
+        </Grid>
+
+
         <StackPanel Grid.Row="1"
                     VerticalAlignment="Top"
-                    HorizontalAlignment="Center">
-            <Label Content="Электронная почта" 
-                   FontSize="20"/>
-            <TextBox Name="EmailBox"
-                     Height="30"
-                     FontSize="20"/>
-            <Label Content="Дата рождения"
-                   FontSize="20"/>
-            <TextBox Name="BirthdayBox"
-                     Height="30"
-                     FontSize="20"/>
+                    HorizontalAlignment="Center"
+                    Visibility="Collapsed">
             <Label Content="Номер телефона"
                    FontSize="20"/>
             <TextBox Name="PhoneBox"
